styles/styles.css
/*/ Styles for Dev /*/
html{
    background-color: #1b332e;
    font-family: Verdana, sans-serif;
    color: white;
}

.row{
    display: flex;
}

.nav{
    display: flex;
    justify-content: flex-end;
    align-items: center;

    width: 100%;
}

.card {
    width: 25%;
    background-color: #081635;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 15px;
}

.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.card img{
    width: 100%;
    height: 10rem;
    object-fit: cover;
    border-radius: 15px 15px 0 0;
}

.card-body {
    width: 100%;
    padding: 10px 16px;
}

.card-body .row{
    display: flex;
    justify-content: space-between;
}

.icon{
    width: auto;
    height: 2rem;
}

.profile{
    width: 15rem;
    object-fit: cover;
    border-radius: 50%;
}

#darkmode-toggle{
    width: 0;
    height: 0;
    visibility: hidden;

}

#darkmode-toggle:checked + label[for=darkmode-toggle]{
    background: #242424;
}

#darkmode-toggle:checked + label[for=darkmode-toggle]:after{
    left: 39px;
    transform: translateX(-100%);
    background: linear-gradient(180deg, #777, #3a3a3a);
}

label[for=darkmode-toggle]{
    width: 40px;
    height: 20px;
    position: relative;
    display: block;
    background: #ebebeb;
    border-radius: 20px;
    box-shadow: inset 0px 1px rgba(0,0,0,0.4), inset 0px 1px rgba(255, 255, 255, 0.4);
    cursor: pointer;
    transition: 0.3s;
}

label[for=darkmode-toggle]:after{
    content: "";
    width: 18px;
    height: 18px;
    position: absolute;
    top: 1px;
    left: 1px;
    background: linear-gradient(180deg, #ffcc89, #d8860b);
    border-radius: 18px;
    box-shadow: 0px 1px rgba(0,0,0,0.2);
    transition: 0.3s;
}

/*label[for=darkmode-toggle]:active:after{*/
/*    width: 26px;*/
/*}*/

